<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_funcionalidades"
        android:icon="@drawable/ic_vector_funcionalidades"
        android:title="@string/title_funcionalidades" />

    <item
        android:id="@+id/navigation_registros"
        android:icon="@drawable/ic_vector_registros"
        android:title="@string/title_registros" />

</menu>
