...
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    tools:context="com.project.tfg.ui.funcionalidades.FuncionalidadesFragment">

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:layout_marginTop="4dp"
        android:text="@string/logout_title"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_lock_power_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_account_btn"
        android:layout_width="302dp"
        android:layout_height="63dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete_title"
        android:textSize="20sp"
        app:icon="@android:drawable/ic_delete"
...
